@@ -177,6 +177,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #18643: Add socket.socketpair() on Windows.
+
 - Issue #22435: Fix a file descriptor leak when SocketServer bind fails.
 
 - Issue #13096: Fixed segfault in CTypes POINTER handling of large
